--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list footer-content">
-          <li>Powered By <a href="https://chiven-young.github.io/">Chiven Young</a></li>
+          <li>Powered By <a href="https://weibo.com/obeing/">Chiven Young</a></li>
           <li>Made with <i class="fa fa-heart"></i> on <a href="http://jekyllrb.com"><span>{ { Jekyll } }</a></span></li>
 
 
