--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,16 @@
 <li class='c-nav__item'>
-  <a href='{{ site.baseurl }}/' class='c-nav__link'>Inicio</a>
+  <a href='{{ site.baseurl }}/' class='c-nav__link'>首页</a>
 </li>
 <li class='c-nav__item'>
-  <a href='{{ site.baseurl }}/tag/aplicaciones/' class='c-nav__link'>Aplicaciones</a>
+  <a href='{{ site.baseurl }}/tag/aplicaciones/' class='c-nav__link'>哲学</a>
 </li>
 <li class='c-nav__item'>
-  <a href='{{ site.baseurl }}/tag/desarrollo-web/' class='c-nav__link'>Desarrollo Web</a>
+  <a href='{{ site.baseurl }}/tag/desarrollo-web/' class='c-nav__link'>艺术</a>
 </li>
 <li class='c-nav__item'>
-  <a href='{{ site.baseurl }}/tag/internet/' class='c-nav__link'>Internet</a>
+  <a href='{{ site.baseurl }}/tag/internet/' class='c-nav__link'>笔记</a>
 </li>
 <li class='c-nav__item'>
-  <a href='{{ site.baseurl }}/about' class='c-nav__link'>Sobre mí</a>
+  <a href='{{ site.baseurl }}/about' class='c-nav__link'>关于</a>
 </li>
 
