--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,7 +6,7 @@
 
 <div id='disqus_thread'></div>
 <script>
-  var disqus_shortname = 'leninalbertop'; // required: replace `aspirethemes-demos` with your Disqus shortname
+  var disqus_shortname = 'withyourDisqusshortname'; // required: replace `aspirethemes-demos` with your Disqus shortname
 
   // DON'T EDIT BELOW THIS LINE
   var disqus_config = function () {
