--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,22 +4,10 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <title>{% if page.serp_title %}{{ page.serp_title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <!-- <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title> -->
-  <meta property="fb:pages" content="1179855705516669">
   <meta property="ia:markup_url" content="{{site.url}}{{ page.url }}">
-  <meta property="article:publisher" content="https://www.facebook.com/leninblogger/" />
-  <meta property="article:author" content="Lenin Peña" />
+  <meta property="article:author" content="Chiven Young" />
   {% seo title=false %}
   <link rel='alternate' type='application/rss+xml' title='{{ site.title }}' href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
-  <!-- Google Search Console -->
-  <meta name="google-site-verification" content="NU9fyKK0-0LP7ohXzKvGgFwy7G7KHE1vXgr_s1EMDQk" />
-  <!-- Bing Webmaster Tools -->
-  <meta name="msvalidate.01" content="E25A87B1BB463F39DBC921CD16EB2878" />
-  <!-- Pinterest -->
-  <meta name="p:domain_verify" content="1a056c9de62c1e0e27fb2c58b667c982"/>
-  <!-- Yandex Webmaster Tools -->
-  <meta name="yandex-verification" content="7b5e94409b493f97" />
-  <!-- Google adsense -->
-  <script data-ad-client="ca-pub-8797646936770586" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
