--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -51,7 +51,7 @@
 
       <div class='c-post-card__meta'>
         <time class='c-post-card__date' datetime='{{ post.date | date_to_xmlschema }}' title='{{ post.date | date: '%d %b %Y' }}'>{{ post.date | date: '%d %b %Y' }}</time>
-        <div class='c-post-card__author'>Lenin Peña</div>
+        <div class='c-post-card__author'>Chiven Young</div>
       </div>
     </div>
   </div>
