--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -2,7 +2,7 @@
   <form method='post'
         target='_blank'
         class='c-subscribe-form'
-        action='https://leninalbertop.us9.list-manage.com/subscribe/post?u=432d85c8e21d05b15af293d9d&amp;id=0e28b7afdc'>
+        action=''>
     <div class='form-group'>
       <input type='email' name='EMAIL' class='c-subscribe-form__input' placeholder='Correo'>
     </div>
